Dockerfile and config.json updates:
- **Repository**: Base image switched to `ghcr.io/home-assistant/aarch64-base-debian:bullseye`.
- **Z-Way Installation**: Instead of using a repository for Z-Way installation, it's now directly installed via a `.deb` package. This allows for more flexibility in version management and installing necessary updates without repository dependency.
- **Ports**: Removed ports that were previously unused or didn't provide significant functionality for the addon.
- **Startup Script**: Transitioned from a standard startup script to using `services.d`, offering more flexibility in managing container processes.

- **init: false**: Added to disable Docker's built-in initialization. This prevents the addon from auto-initializing upon Home Assistant startup.
- **host_network: true**: Enables the addon to use the host's network. This is utilized to retrieve the controller's internal IP address, essential for ZBW_Connect functionality.
- **host_dbus: true**: Grants the addon access to the host's DBus. This is crucial for the HomeKit module, which interacts with other system components via DBus.
- **hassio_api: true**: Allows the addon to interact with the Home Assistant API, potentially useful for integrating addon features with the main system.
- **Logging Level**: Introduced a parameter allowing users to select the detail level of logs, useful for debugging or monitoring the addon's operation.

- **run.sh Decomposition**: The original `run.sh` script has been decomposed into multiple scripts to better manage the startup and initialization processes.
  - **services.d**: Contains the main scripts responsible for starting and stopping services. This structure allows for more granular control over each service's lifecycle.
    - **z-way-server**: Scripts within this directory manage the Z-Way server's startup and termination.
    - **zbw_connect**: Scripts here handle the startup and termination of the ZBW_Connect service.
  - **cont-init.d**: Conta

--- a/zwave_me_server/translations/en.yaml
+++ b/zwave_me_server/translations/en.yaml
@@ -18,3 +18,6 @@ configuration:
   local_ip:
     name: IP address of the controller
     description: You can specify the real ip for z-way manually, this is necessary for those cases if you have problems with access via homeassistant.local:8083
+  log_level:
+    name: Log level
+    description: Set the logging level (0 for all logs, 6 to disable all logs)
